--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
 <body>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     
-    <h1>chapter3. 리터럴과 변수 상수 데이터타입</h1>
+    <!-- <h1>chapter3. 리터럴과 변수 상수 데이터타입</h1> -->
+    <h1>chapter4. 제어문</h1>
+
     <!-- <script src="chapter3/template.js"></script> -->
     <!-- <script src="chapter3/symbol.js"></script> -->
     <!-- <script src="chapter3/obj.js"></script> -->
-    <script src="chapter3/array.js"></script>
+    <!-- <script src="chapter3/array.js"></script> -->
+    <!-- <script src="chapter4/crownAndAnchor.js"></script> -->
+    <!-- <script src="chapter4/for.js"></script> -->
+    <script src="chapter4/control.js"></script>
+
 </body>
 </html>
