--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     
     <!-- <h1>chapter3. 리터럴과 변수 상수 데이터타입</h1> -->
     <!-- <h1>chapter4. 제어문</h1> -->
-    <h1>chapter5. 표현식과 연산자</h1>
-    
+    <!-- <h1>chapter5. 표현식과 연산자</h1> -->
+    <h1>chapter6. 함수</h1>
+
+
     <!-- <script src="chapter3/template.js"></script> -->
     <!-- <script src="chapter3/symbol.js"></script> -->
     <!-- <script src="chapter3/obj.js"></script> -->
@@ -16,6 +18,11 @@
     <!-- <script src="chapter4/crownAndAnchor.js"></script> -->
     <!-- <script src="chapter4/for.js"></script> -->
     <!-- <script src="chapter5/compare.js"></script> -->
-    <script src="chapter5/destructuring.js"></script>
+    <!-- <script src="chapter5/destructuring.js"></script> -->
+    <!-- <script src="chapter6/function01.js"></script> -->
+    <!-- <script src="chapter6/function02.js"></script> -->
+    <!-- <script src="chapter6/function03.js"></script> -->
+    <!-- <script src="chapter6/function04.js"></script> -->
+    <script src="chapter6/function05.js"></script>
 </body>
 </html>
