--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <!-- <script src="chapter6/function02.js"></script> -->
     <!-- <script src="chapter6/function03.js"></script> -->
     <!-- <script src="chapter6/function04.js"></script> -->
-    <script src="chapter6/function05.js"></script>
+    <!-- <script src="chapter6/function05.js"></script> -->
+    <!-- <script src="chapter9/object.js"></script> -->
+    <script src="chapter9/object01.js"></script>
+    <!-- <script src="chapter10/weakMap.js"></script> -->
+
 </body>
 </html>
