--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <!-- <script src="chapter6/function03.js"></script> -->
     <!-- <script src="chapter6/function04.js"></script> -->
     <!-- <script src="chapter6/function05.js"></script> -->
+    <script src="chapter7/IIFF.js"></script>
     <!-- <script src="chapter9/object.js"></script> -->
-    <script src="chapter9/object01.js"></script>
+    <!-- <script src="chapter9/object01.js"></script> -->
     <!-- <script src="chapter10/weakMap.js"></script> -->
 
 </body>
