--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
 <body>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     
-    <!-- <h1>chapter3. 리터럴과 변수 상수 데이터타입</h1> -->
-    <!-- <h1>chapter4. 제어문</h1> -->
-    <!-- <h1>chapter5. 표현식과 연산자</h1> -->
-    <h1>chapter6. 함수</h1>
+    <h1>index.html</h1>
 
 
     <!-- <script src="chapter3/template.js"></script> -->
@@ -24,7 +21,10 @@
     <!-- <script src="chapter6/function03.js"></script> -->
     <!-- <script src="chapter6/function04.js"></script> -->
     <!-- <script src="chapter6/function05.js"></script> -->
-    <script src="chapter7/IIFF.js"></script>
+    <!-- <script src="chapter7/IIFF.js"></script> -->
+    <!-- <script src="chapter8/array01.js"></script> -->
+    <!-- <script src="chapter8/array02.js"></script> -->
+    <script src="chapter8/array03.js"></script>
     <!-- <script src="chapter9/object.js"></script> -->
     <!-- <script src="chapter9/object01.js"></script> -->
     <!-- <script src="chapter10/weakMap.js"></script> -->
