--- a/index.html
+++ b/index.html
@@ -12,19 +12,29 @@
     <!-- <script src="chapter3/symbol.js"></script> -->
     <!-- <script src="chapter3/obj.js"></script> -->
     <!-- <script src="chapter3/array.js"></script> -->
+
     <!-- <script src="chapter4/crownAndAnchor.js"></script> -->
     <!-- <script src="chapter4/for.js"></script> -->
+
     <!-- <script src="chapter5/compare.js"></script> -->
     <!-- <script src="chapter5/destructuring.js"></script> -->
+
     <!-- <script src="chapter6/function01.js"></script> -->
     <!-- <script src="chapter6/function02.js"></script> -->
     <!-- <script src="chapter6/function03.js"></script> -->
     <!-- <script src="chapter6/function04.js"></script> -->
     <!-- <script src="chapter6/function05.js"></script> -->
+    
     <!-- <script src="chapter7/IIFF.js"></script> -->
+
     <!-- <script src="chapter8/array01.js"></script> -->
     <!-- <script src="chapter8/array02.js"></script> -->
-    <script src="chapter8/array03.js"></script>
+    <!-- <script src="chapter8/array03.js"></script> -->
+    <!-- <script src="chapter8/array04.js"></script> -->
+    <!-- <script src="chapter8/array05.js"></script> -->
+    <!-- <script src="chapter8/array06.js"></script> -->
+    <script src="chapter8/array07.js"></script>
+
     <!-- <script src="chapter9/object.js"></script> -->
     <!-- <script src="chapter9/object01.js"></script> -->
     <!-- <script src="chapter10/weakMap.js"></script> -->
