--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
     <!-- <script src="chapter8/array04.js"></script> -->
     <!-- <script src="chapter8/array05.js"></script> -->
     <!-- <script src="chapter8/array06.js"></script> -->
-    <script src="chapter8/array07.js"></script>
+    <!-- <script src="chapter8/array07.js"></script> -->
 
-    <!-- <script src="chapter9/object.js"></script> -->
     <!-- <script src="chapter9/object01.js"></script> -->
+    <!-- <script src="chapter9/object02.js"></script> -->
+    <!-- <script src="chapter9/object03.js"></script> -->
+    <!-- <script src="chapter9/object04.js"></script> -->
+    <script src="chapter9/object05.js"></script>
+
+
     <!-- <script src="chapter10/weakMap.js"></script> -->
 
 </body>
