--- a/index.html
+++ b/index.html
@@ -39,8 +39,13 @@
     <!-- <script src="chapter9/object02.js"></script> -->
     <!-- <script src="chapter9/object03.js"></script> -->
     <!-- <script src="chapter9/object04.js"></script> -->
-    <script src="chapter9/object05.js"></script>
-
+    <!-- <script src="chapter9/object05.js"></script> -->
+    <!-- <script src="chapter9/object06.js"></script> -->
+    <!-- <script src="chapter9/object07.js"></script> -->
+    <!-- <script src="chapter9/object08.js"></script> -->
+    <script src="chapter9/object09.js"></script>
+    <!-- <script src="chapter9/object10.js"></script> -->
+    <!-- <script src="chapter9/object11.js"></script> -->
 
     <!-- <script src="chapter10/weakMap.js"></script> -->
 
