--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
     <!-- <script src="chapter9/object06.js"></script> -->
     <!-- <script src="chapter9/object07.js"></script> -->
     <!-- <script src="chapter9/object08.js"></script> -->
-    <script src="chapter9/object09.js"></script>
+    <!-- <script src="chapter9/object09.js"></script> -->
     <!-- <script src="chapter9/object10.js"></script> -->
     <!-- <script src="chapter9/object11.js"></script> -->
 
-    <!-- <script src="chapter10/weakMap.js"></script> -->
+    <!-- <script src="chapter10/map.js"></script> -->
+    <!-- <script src="chapter10/weakmap.js"></script> -->
+    <!-- <script src="chapter10/set.js"></script> -->
+    <script src="chapter10/weakset.js"></script>
 
 </body>
 </html>
