--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@
     <!-- <script src="chapter10/map.js"></script> -->
     <!-- <script src="chapter10/weakmap.js"></script> -->
     <!-- <script src="chapter10/set.js"></script> -->
-    <script src="chapter10/weakset.js"></script>
+    <!-- <script src="chapter10/weakset.js"></script> -->
+
+    <!-- <script src="chapter12/interator.js"></script> -->
+    <script src="chapter12/generator.js"></script>
+
+
+
 
 </body>
 </html>
