--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
     <!-- <script src="chapter10/set.js"></script> -->
     <!-- <script src="chapter10/weakset.js"></script> -->
 
+    <!-- <script src="chapter11/Error.js"></script> -->
+    <!-- <script src="chapter11/tryCatch.js"></script> -->
+    <script src="chapter11/Error02.js"></script>
+
     <!-- <script src="chapter12/interator.js"></script> -->
-    <script src="chapter12/generator.js"></script>
+    <!-- <script src="chapter12/generator.js"></script> -->
 
 
 
