--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- <script src="chapter9/object02.js"></script> -->
     <!-- <script src="chapter9/object03.js"></script> -->
     <!-- <script src="chapter9/object04.js"></script> -->
-    <!-- <script src="chapter9/object05.js"></script> -->
+    <script src="chapter9/object05.js"></script>
     <!-- <script src="chapter9/object06.js"></script> -->
     <!-- <script src="chapter9/object07.js"></script> -->
     <!-- <script src="chapter9/object08.js"></script> -->
@@ -54,7 +54,7 @@
 
     <!-- <script src="chapter11/Error.js"></script> -->
     <!-- <script src="chapter11/tryCatch.js"></script> -->
-    <script src="chapter11/Error02.js"></script>
+    <!-- <script src="chapter11/Error02.js"></script> -->
 
     <!-- <script src="chapter12/interator.js"></script> -->
     <!-- <script src="chapter12/generator.js"></script> -->
