--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     
     <h1>index.html</h1>
 
+    <h1 class="rainbow">Happy New Year</h1>
+
     <!-- <script src="chapter3/template.js"></script> -->
     <!-- <script src="chapter3/symbol.js"></script> -->
     <!-- <script src="chapter3/obj.js"></script> -->
@@ -58,9 +60,9 @@
     <!-- <script src="chapter12/interator.js"></script> -->
     <!-- <script src="chapter12/generator.js"></script> -->
 
-      <!-- <script src="chapter13/yesar.js"></script> -->
+      <script src="chapter13/yesar.js"></script>
 
-      <script src="chapter21/email.js"></script>
+      <!-- <script src="chapter21/email.js"></script> -->
 
 
 
